--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sample-react",
-  "version": "0.1.0",
+  "name": "react-payment-form",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
