--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,5 @@
 runtime: nodejs18
+env: standard
 handlers:
   # Serve all static files with url ending with a file extension
   - url: /(.*\..+)$
@@ -8,3 +9,11 @@ handlers:
   - url: /.*
     static_files: build/index.html
     upload: build/index.html
+instance_class: F1
+automatic_scaling:
+  min_idle_instances: automatic
+  max_idle_instances: 1
+  min_pending_latency: 3000ms
+  max_pending_latency: automatic
+  min_instances: 0
+  max_instances: 1
